--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,5 +57,6 @@ per-file-ignores = """
     test/test_tui.py:F401,F811
     test/test_link.py:PT012
     test/test_nexus.py:PT012
+    test/test_store_with_errors.py:PT012
     """
 exclude = ["demos", "build"]
